<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_layout"
        android:text="@string/test"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/fade_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fade_in"
                android:textAllCaps="false"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/fade_out"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fade_out"
                android:textAllCaps="false"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/zoom_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/zoom_in"
                android:textAllCaps="false"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/zoom_out"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/zoom_out"
                android:textAllCaps="false"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/slide_down"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/slide_down"
                android:textAllCaps="false"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/slide_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/slide_up"
                android:textAllCaps="false"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/bounce"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bounce"
                android:textAllCaps="false"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/rotate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rotate"
                android:textAllCaps="false"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>